# Rocket-Software-Fusion

./: qnx.nto.toolchain.cmake  setenv.sh
control/: CMakeLists.txt  UpdateFromMatlab.sh
control/AcadoSolver/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  acado_solver_sfun.cpp  test
control/RocketSolver/include/: RocketSolver.h  RocketSolver_adtool2forces.h  RocketSolver_casadi.h
control/RocketSolver/interface/: RocketSolver_adtool2forces.c  RocketSolver_dynamics_mex.c  RocketSolver_inequalities_mex.c  RocketSolver_mex.c
control/RocketSolver/lib/: Update.sh  libRocketSolver.so.skip
control/src/: main.cxx  mpc.cxx  mpc.h  mpc.hPUREFORCE  mpcPUREFORCE.cxx  mpcSimple.cxx  mpcSimple.h
control/src.embedded/: Makefile  main.c  mpc.c  mpc.cxx  mpc.h  mpcFull.cxx  mpcFull.h  version.map
control/src.embedded/RocketSolver/include/: RocketSolver.h  RocketSolver_memory.h
control/src.embedded/RocketSolver/interface/: COPYING.m  RocketSolver.m  RocketSolverBuildable.m  RocketSolver_adtool2forces.c  RocketSolver_build.py  RocketSolver_casadi.c  RocketSolver_coderFunction.m  RocketSolver_coderFunctioncompact.m  RocketSolver_createCoderMatlabFunction.m  RocketSolver_lib.mdl  RocketSolver_objective_mex.c  RocketSolver_py.py  RocketSolvercompact_lib.mdl  Update.sh  definitions.py
control/src.embedded/RocketSolver/lib/: libc.so.6  version.map  wrapper.c
control/unit_test_forces/: data.csv  main.c  mpc.c  mpc.h  out  solver.c
control/unit_test_forces/RocketSolver/include/: RocketSolver_memory.h  Update.sh
control/unit_test_forces/RocketSolver/interface/: RocketSolver_casadi.c  RocketSolver_get_mem_size.c  RocketSolver_simulinkBlock.c  RocketSolver_simulinkBlockcompact.c
depandancies/Fast-DDS-2.0.2/: CMakeLists.txt
depandancies/boost/: compile.sh
depandancies/boost/bin.v2/: project-cache.jam
guidance/: CMakeLists.txt  compile.sh  qnx.nto.toolchain.cmake
guidance/src/: fsm.cpp  fsm.hpp  fsmlist.hpp  main.cpp
guidance/tinyfsm/examples/elevator/: fsmlist.hpp  fsmlist.hpp.gch
install/include/fastcdr/: config.h
install/include/fastrtps/: config.h
install/include/subscriber/: subscriber_s.h
install/lib/: libfastcdr.so.1  libfastcdr.so.1.0.26
install/lib/boost/: libboost_atomic.so.1.65.0  libboost_context.so.1.65.0  libboost_coroutine.so.1.65.0  libboost_iostreams.so.1.65.0  libboost_math_tr1f.so.1.65.0  libboost_random.so.1.65.0  libboost_serialization.so.1.65.0  libboost_signals.so.1.65.0  libboost_stacktrace_basic.so.1.65.0  libboost_type_erasure.so.1.65.0  libboost_wserialization.so.1.65.0
install/lib/pkgconfig/: tinyxml2.pc
lib/: libfastrtps.so.2.10
micrortps_agent/idl/: actuator_armed.idl  actuator_controls_0.idl  vehicle_attitude_groundtruth.idl  vehicle_command_ack.idl
micrortps_agent/idl/odometry/: CMakeLists.txt  vehicle_odometryPubSubMain.cxx  vehicle_odometryPublisher.cxx  (+3 more)
micrortps_agent/src/: RtpsTopics.cpp  RtpsTopics.h  actuator_armed.cpp  actuator_armed.h  actuator_armedPubSubTypes.cpp  actuator_armedPubSubTypes.h  actuator_armed_Publisher.cpp  actuator_armed_Publisher.h  actuator_controls.cpp  actuator_controls_0.cpp  actuator_controls_0_Subscriber.cpp  actuator_controls_0_Subscriber.h  actuator_controls_Subscriber.cpp  actuator_controls_Subscriber.h  collision_constraints.cpp  debug_array.cpp  debug_key_value.cpp  debug_value.cpp  debug_vect.cpp  estimator_attitude.cpp  estimator_attitude_Publisher.cpp  estimator_attitude_Publisher.h  input_rc.cpp  offboard_control_mode.cpp  onboard_computer_status.cpp  optical_flow.cpp  position_setpoint.cpp  position_setpoint_triplet.cpp  satellite_info.cpp  sensor_combined.cpp  telemetry_status.cpp  timesync.cpp  trajectory_bezier.cpp  trajectory_setpoint.cpp  trajectory_waypoint.cpp  vehicle_angular_velocity.cpp  vehicle_angular_velocity_groundtruth.cpp  vehicle_angular_velocity_groundtruthPubSubTypes.cpp  vehicle_angular_velocity_groundtruth_Publisher.cpp  vehicle_angular_velocity_groundtruth_Publisher.h  (+29 more)
middleware/: CMakeLists.txt
middleware/messages/: CMakeLists.txt
middleware/messages/actuator_controls/: actuator_controls.cxx  actuator_controls.idl  actuator_controlsPubSubTypes.cxx  actuator_controlsPubSubTypes.h
middleware/messages/actuator_controls_0/: actuator_controls_0.cxx  actuator_controls_0PubSubTypes.cxx  actuator_controls_0PubSubTypes.h
middleware/messages/estimator_attitude/: estimator_attitude.cxx  estimator_attitude.idl  estimator_attitudePubSubTypes.cxx
middleware/messages/fsmDataOut/: fsmDataOut.h  fsmDataOut.idl  fsmDataOutPubSubTypes.cxx  fsmDataOutPubSubTypes.h
middleware/messages/fsmDataOut/tmp/: CMakeLists.txt  fsmDataOut.cxx  fsmDataOut.h  fsmDataOutPubSubMain.cxx  fsmDataOutPublisher.cxx  fsmDataOutPublisher.h  fsmDataOutSubscriber.cxx  fsmDataOutSubscriber.h
middleware/messages/timesync/: timesync.cxx
middleware/messages/vehicle_angular_velocity/: vehicle_angular_velocity.cxx
middleware/messages/vehicle_angular_velocity_groundtruth/: vehicle_angular_velocity_groundtruth.cxx  vehicle_angular_velocity_groundtruth.h  vehicle_angular_velocity_groundtruth.idl  vehicle_angular_velocity_groundtruthPubSubTypes.h
middleware/messages/vehicle_attitude/: vehicle_attitude.cxx
middleware/messages/vehicle_attitude_groundtruth/: vehicle_attitude_groundtruth.cxx  vehicle_attitude_groundtruth.h  vehicle_attitude_groundtruthPubSubTypes.cxx  vehicle_attitude_groundtruthPubSubTypes.h
middleware/messages/vehicle_command/: vehicle_command.cxx
middleware/messages/vehicle_local_position/: vehicle_local_position.cxx
middleware/messages/vehicle_local_position_groundtruth/: vehicle_local_position_groundtruth.cxx  vehicle_local_position_groundtruth.h  vehicle_local_position_groundtruth.idl
middleware/messages/vehicle_odometry/: CMakeLists.txt  vehicle_odometry.cxx
middleware/messages/vehicle_visual_odometry/: vehicle_visual_odometry.cxx  vehicle_visual_odometry.h
middleware/publisher/: CMakeLists.txt  publisher_s.cxx  publisher_s.h
middleware/subscriber/: CMakeLists.txt  subscriber_s.cxx
(+15 files in other folders)
